# co_op_translator

./: .env.template  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
bounding_boxes/: korean.json
data/expected_results/: blurry_text_image.json  no_text_image.json  text_image1.json
docs/: create-env-file.md  install-package.md  set-up-azure-resources.md  use-co-op-translator.md
notebooks/: notebook_for_microsoft_final.ipynb  notebook_for_module_project copy.ipynb  notebook_for_module_project.ipynb
src/: main.py
src/co_op_translator/: __main__.py
src/co_op_translator/config/: constants.py  font_language_mappings.yml
src/co_op_translator/translators/: image_analyzer.py  image_translator.py  markdown_translator.py  project_translator.py  text_translator.py
src/co_op_translator/utils/: file_utils.py  image_utils.py  markdown_utils.py
src/config/: __init__.py  base.py  development.py  font_config.py  production.py
src/image-translator/: azure-vision-translator.py  azure_vision_translator.py
src/image_translator/: azure_vision_translator.py
src/test_repo/docs/01.Introduce/: Phi3Family.md
src/test_repo/md/01.Introduce/: Phi3Family.md
src/test_repo/translations/de/md/01.Introduce/: Phi3Family.md
src/test_repo/translations/es/docs/01.Introduce/: Phi3Family.md
src/test_repo/translations/es/md/01.Introduce/: Phi3Family.md
src/test_repo/translations/fr/md/01.Introduce/: Phi3Family.md
src/text-translator/: openai_translator.py
src/text_translator/: openai_translator.py
src/translators/: image_analyzer.py  image_translator.py  markdown_translator.py  project_translator.py  text_translator.py
src/utils/: file_utils.py  image_utils.py  markdown_utils.py  text_utils.py
tests/image_translator/: test_azure_vision_translator.py
tests/integration_tests/: integration_test.py
tests/text_translator/: test_openai_translator.py
tests/utils/: test_image_utils.py  test_text_utils.py
