[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-translator"
version = "0.1.0"
description = "A CLI tool for translating project files"
authors = [
    { name = "Minseok_Song", email = "skytin1004@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
homepage = "https://github.com/Imperial-EE-Microsoft/microsoft_translation_public"
["translation", "CLI", "project", "translator", "image translator", "project translator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.0",
    "openai>=0.27.0",
    "Pillow>=8.0.0",
    "numpy>=1.19.0",
    "azure-ai-vision-imageanalysis>=1.0.0b2",
    "azure-cognitiveservices-vision-computervision>=0.9.0",
    "azure-core>=1.30.0",
    "python-dotenv>=1.0.0"
]
python-requires = ">=3.6"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[tool.setuptools.packages.find]
where = "src"

[tool.setuptools]
packages = find:

[project.scripts]
translate = "src.translators.project_translator:translate_project"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
