[metadata]
name = translation_project
version = 0.1.0
description = A project for translating text in images using Azure and OpenAI services

[options]
packages = find:
package_dir =
    = src
install_requires =
    azure-ai-vision-imageanalysis==1.0.0b2
    azure-cognitiveservices-vision-computervision==0.9.0
    azure-core==1.30.2
    openai==1.33.0
    opencv-python==4.10.0.82
    Pillow==10.3.0
    numpy==1.26.4
    python-dotenv==1.0.1
    requests==2.32.3
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    translate = main:main

[egg_info]
egg_base = .
